10. Kubernetes/K8s_Notes/4. Networking/Network Policies/Allow-egress-traffic-only-to-specific-CIDR.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-specific-ip
  namespace: app
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.1.0/24
    ports:
    - protocol: TCP
      port: 443


# Backend pods can only access IPs in 192.168.1.0/24 on TCP port 443 (e.g., HTTPS)./
