10. Kubernetes/K8s_Notes/4. Networking/Network Policies/Default-Deny-Ingress-Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app
spec:
  podSelector: {}  # Select all pods in namespace
  policyTypes:
  - Ingress
  - Egress


# This blocks all incoming traffic to pods in the app namespace unless explicitly allowed by other NetworkPolicies.
