10. Kubernetes/K8s_Notes/4. Networking/Network Policies/Deny All Egress-allow-specfc-ips.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 203.0.113.0/24
    ports:
    - protocol: TCP
      port: 443


# For security: Block all outbound traffic except to trusted IP range (e.g., company API 203.0.113.0/24).
# Pods can only make HTTPS (443) connections to 203.0.113.0/24.
# Block everything else for better security.
